--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@chris-si/root",
-  "version": "10",
+  "version": "11.0.0",
   "description": "Redis(ioredis) module for Nest framework (node.js).",
   "private": true,
   "license": "MIT",
@@ -26,13 +26,13 @@
   "devDependencies": {
     "@commitlint/cli": "17.7.1",
     "@commitlint/config-conventional": "17.7.0",
-    "@nestjs/common": "10.2.6",
-    "@nestjs/core": "10.2.6",
-    "@nestjs/platform-fastify": "10.2.6",
-    "@nestjs/terminus": "10.1.1",
-    "@nestjs/testing": "10.2.6",
+    "@nestjs/common": "11.0.7",
+    "@nestjs/core": "11.0.7",
+    "@nestjs/platform-fastify": "11.0.7",
+    "@nestjs/terminus": "11.0.0",
+    "@nestjs/testing": "11.0.7",
     "@types/jest": "29.5.5",
-    "@types/node": "20.7.0",
+    "@types/node": "22.13.0",
     "@typescript-eslint/eslint-plugin": "6.7.3",
     "@typescript-eslint/parser": "6.7.3",
     "concurrently": "8.2.1",
@@ -41,9 +41,9 @@
     "eslint-plugin-jest": "27.4.0",
     "eslint-plugin-prettier": "5.0.0",
     "eslint-plugin-tsdoc": "0.2.17",
-    "fastify": "4.23.2",
+    "fastify": "5.2.1",
     "husky": "8.0.3",
-    "ioredis": "5.3.2",
+    "ioredis": "5.4.2",
     "istanbul-badges-readme": "1.8.5",
     "jest": "29.7.0",
     "jest-extended": "4.0.1",
@@ -72,5 +72,6 @@
   },
   "bugs": {
     "url": "https://github.com/chris-si/nestjs-redis/issues"
-  }
+  },
+  "packageManager": "pnpm@8.15.1+sha512.831cf4c5f8b8374af71521d4d153db49d7086de615c2af7cb5e9d7eb8ba630ddac46fea495d643e552ef2e68a3aa99a3e5e9fbee8696702967504df5c59cb273"
 }
